Update link color

--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ header {
 }
 
 a {
-  color: #219653;
+  color: var(--link-color);
 }
 
 /* ==========================================================================
