--- a/css/style.css
+++ b/css/style.css
@@ -116,12 +116,6 @@ body {
   }
 }
 
-header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 @media (max-width: 700px) {
   header {
     margin-bottom: 30px;
@@ -353,8 +347,7 @@ a {
 }
 
 .logo {
-  margin-top: 1em;
-  margin-bottom: 1em;
+  margin-top: 40px;
   position: sticky;
-  top: 50%;
+  top: 40px;
 }
